--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+memmap2 = { version = "0.9.4", optional = true }
 anyhow = "1.0.86"
 bincode = "1.3.3"
 dashmap = { version = "5.5.3", features = ["inline", "serde"] }
@@ -16,13 +17,15 @@ rusqlite = { version = "0.31.0", features = [
     "blob",
 ], optional = true }
 thiserror = "1.0.61"
-# tokio = { version = "1.37.0", features = ["full"] }
+cxx = { version = "1.0.124", features = ["c++14", "c++17"] }
+
 
 [features]
-default = ["local_fs", "sqlite"]
+default = ["local_fs", "sqlite", "memmap"]
 local_fs = []
 sqlite = ["rusqlite"]
 rusqlite = ["dep:rusqlite"]
+memmap = ["dep:memmap2"]
 
 
 [dev-dependencies]
