--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,25 @@ project(blob_store)
 
 option(ENABLE_LTO "Enable cross language linking time optimization" ON)
 if(ENABLE_LTO)
-  include(CheckIPOSupported)
-  check_ipo_supported(RESULT supported OUTPUT error)
-  if(supported)
+  if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    message(STATUS "using Clang compiler: ${CMAKE_CXX_COMPILER_ID}")
+    include(CheckIPOSupported)
+    check_ipo_supported(RESULT supported OUTPUT error)
+    if(supported)
       message(STATUS "IPO / LTO enabled")
       set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
       add_link_options(-fuse-ld=lld)
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
       set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
-  else()
+      set(RUST_FLAGS "-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld")
+      set(ENV{RUSTFLAGS} "${RUST_FLAGS}")
+    else(supported)
       message(STATUS "IPO / LTO not supported: <${error}>")
-  endif()
-endif()
-
-if(ENABLE_LTO)
-    set(RUST_FLAGS "-Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld")
-    set(ENV{RUSTFLAGS} "${RUST_FLAGS}")
-    message(STATUS "RUSTFLAGS: $ENV{RUSTFLAGS}")
-endif()
-
+    endif(supported)
+  else(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    message(STATUS "IPO / LTO requires Clang compiler")
+  endif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+endif(ENABLE_LTO)
 
 set(CMAKE_CXX_STANDARD 17)
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
