--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ rusqlite = { version = "0.31.0", features = [
 ], optional = true }
 thiserror = "1.0.61"
 cxx = { version = "1.0.124", features = ["c++14", "c++17"] }
+csv = "1.3.0"
+rand = "0.8.5"
 
 [build-dependencies]
 cxx-build = "1.0.124"
