[feat] enable pre-build lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,22 +53,33 @@ if (FEAT_SQLITE)
     list(APPEND CARGO_FEATURES "--features=sqlite")
 endif()
 
-add_library(blob-store-rs STATIC ${RUST_PART_CXX})
+add_library(blob-store-rs EXCLUDE_FROM_ALL ${RUST_PART_CXX})
 target_include_directories(blob-store-rs PUBLIC ${OUT_DIR}/include/)
+target_link_libraries(blob-store-rs ${RUST_PART_LIB})
 add_custom_command(
-    OUTPUT ${RUST_PART_CXX} ${RUST_PART_LIB}
+    OUTPUT ${RUST_PART_CXX} ${RUST_PART_LIB} ${RUST_PART_LIB_SHARED}
     # COMMAND ${CMAKE_COMMAND} -E echo "Environment variable RUST_FLAGS is $ENV{RUSTFLAGS}"
     COMMAND CARGO_TARGET_DIR=${CARGO_TARGET} ${CARGO_CMD} ${CARGO_FEATURES}
+    DEPENDS 
+        ${CMAKE_CURRENT_SOURCE_DIR}/build.rs
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/ffi/local_file_system.rs
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/ffi/sqlite.rs
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/ffi/memmap.rs
+    COMMENT "Building Rust artifacts"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 add_custom_target(
-    dump_out
+    dump_bundle_out
     # OUTPUT ${RUST_PART_CXX} ${RUST_PART_LIB}
     # COMMAND ${CMAKE_COMMAND} -E echo "Environment variable RUST_FLAGS is $ENV{RUSTFLAGS}"
     COMMAND CARGO_TARGET_DIR=${CARGO_TARGET} ${CARGO_CMD} ${CARGO_FEATURES}
     COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/src/ffi/local_file_system.rs.h ${OUT_DIR}/include/
+    COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/src/ffi/local_file_system.rs.cc ${OUT_DIR}/src/
     COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/src/ffi/sqlite.rs.h ${OUT_DIR}/include/
+    COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/src/ffi/sqlite.rs.cc ${OUT_DIR}/src/
     COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/src/ffi/memmap.rs.h ${OUT_DIR}/include/
+    COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/src/ffi/memmap.rs.cc ${OUT_DIR}/src/
     COMMAND ${CMAKE_COMMAND} -E copy ${CXX_BRIDGE}/../rust/cxx.h ${OUT_DIR}/include/
     COMMAND ${CMAKE_COMMAND} -E copy ${RUST_PART_LIB} ${OUT_DIR}/lib/
     COMMAND ${CMAKE_COMMAND} -E copy ${RUST_PART_LIB_SHARED} ${OUT_DIR}/lib/
@@ -82,17 +93,22 @@ add_custom_target(
 )
 target_link_libraries(blob-store-rs ${RUST_PART_LIB})
 
-add_library(blob-store-boundle-static STATIC IMPORTED)
-set_target_properties(blob-store-boundle-static PROPERTIES IMPORTED_LOCATION ${OUT_DIR}/lib/lib${CRATE_NAME}.a)
-add_library(blob-store-boundle-shared SHARED IMPORTED)
-set_target_properties(blob-store-boundle-shared PROPERTIES IMPORTED_LOCATION ${OUT_DIR}/lib/lib${CRATE_NAME}.so)
+set(BLOB-STORE-BUNDLE-SRC 
+    ${OUT_DIR}/src/local_file_system.rs.cc
+    ${OUT_DIR}/src/memmap.rs.cc
+)
+if (FEAT_SQLITE)
+    list(APPEND BLOB-STORE-BUNDLE-SRC ${OUT_DIR}/src/sqlite.rs.cc)
+endif()
+add_library(blob-store-bundle STATIC ${BLOB-STORE-BUNDLE-SRC})
+target_include_directories(blob-store-bundle PUBLIC ${OUT_DIR}/include/)
+target_link_libraries(blob-store-bundle ${OUT_DIR}/lib/lib${CRATE_NAME}.a)
 
-add_executable(example EXCLUDE_FROM_ALL example.cpp)
-target_link_libraries(example blob-store-rs)
+add_executable(blob-store-example EXCLUDE_FROM_ALL example.cpp)
+target_link_libraries(blob-store-example blob-store-bundle)
 
-add_executable(bench EXCLUDE_FROM_ALL bench.cpp)
+add_executable(blob-store-bench EXCLUDE_FROM_ALL bench.cpp)
+target_link_libraries(blob-store-bench blob-store-bundle)
 if(FEAT_SQLITE)
     target_compile_definitions(bench PUBLIC _ENABLE_SQLITE)
 endif(FEAT_SQLITE)
-
-target_link_libraries(bench blob-store-rs)
